; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Tree.c_Tree_Clear.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Tree.c_Tree_Clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Tree = type { i32*, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.Tree*)* @Tree_Clear to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Tree_Clear(%struct.Tree* %0) #0 {
  %2 = alloca %struct.Tree*, align 8
  %3 = alloca %struct.Tree*, align 8
  store %struct.Tree* %0, %struct.Tree** %2, align 8
  %4 = load %struct.Tree*, %struct.Tree** %2, align 8
  store %struct.Tree* %4, %struct.Tree** %3, align 8
  %5 = load %struct.Tree*, %struct.Tree** %3, align 8
  %6 = load %struct.Tree*, %struct.Tree** %3, align 8
  %7 = getelementptr inbounds %struct.Tree, %struct.Tree* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = call i32 @Tree_Clear_Entry(%struct.Tree* %5, i32* %8)
  %10 = load %struct.Tree*, %struct.Tree** %3, align 8
  %11 = getelementptr inbounds %struct.Tree, %struct.Tree* %10, i32 0, i32 1
  store i64 0, i64* %11, align 8
  %12 = load %struct.Tree*, %struct.Tree** %3, align 8
  %13 = getelementptr inbounds %struct.Tree, %struct.Tree* %12, i32 0, i32 0
  store i32* null, i32** %13, align 8
  ret void
}

declare dso_local i32 @Tree_Clear_Entry(%struct.Tree*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
